<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">今日食堂</string>
    <string name="settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_face">登陆</string>
    <string name="title_activity_register_face">注册</string>
    <string name="title_activity_main_face">菜单</string>
    <string name="title_activity_detail_description_face">菜品详细</string>
    <string name="title_activity_price_com_face">价格比对</string>
    <string name="title_activity_pic_show_face">广场</string>
    <string name="title_activity_call_together_face">拼餐</string>
    <string name="title_activity_take_away_face">外卖</string>    
    <string name="title_activity_person_meg_face">PersonMegFace</string>
    <string name="title_activity_add_dishes_face">AddDishesFace</string>
    
    <string name="please_login">请登录</string>
    <string name="username">用户名</string>
    <string name="password">密码 </string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="more">更多</string>
    <string name="app_title">今日食堂</string>
    <string name="personal_meg">个人信息</string>
    <string name="default_menu_cell_name">菜名</string>
    <string name="default_menu_cell_price">00.00</string>
    <string name="default_menu_cell_commet">0</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_school">所处学校 </string>
    <string name="register_addrs">地址</string>
    <string name="register_info">店铺/食堂描述</string>
    <string name="register_ok">确认注册</string>
    <string name="alter_info">修改</string>
    <string name="price_compare">价格大比拼</string>
    <string name="show_pic">晒图片</string>
    <string name="to_square">广场</string>
    <string name="AA_part">AA制</string>
    <string name="take_away">叫外卖</string>
    <string name="about">关于</string>
    <string name="ok">确定</string>
    <string name="funmi_name">方米公司 </string>
    <string name="funmi_description">更多详情请到XXXX</string>
	<string name="camera">相机</string>
	<string name="gallery">相册</string>
	<string name="cancel">取消</string>
	<string name="canteen">食堂</string>
	<string name="type">种类</string>
	<string name="other_1">其它1</string>
	<string name="other_2">其它2</string>	
	<string name="back">返回</string>
	<string name="deliver">发布</string>
	<string name="about_me">关于我</string>
	<string name="no_name">匿名</string>
	<string name="no_date">无日期</string>
	<string name="no_text">无信息</string>
	<string name="hehe">呵呵</string>
	<string name="dish_name">菜名</string>
	<string name="dish_price">价格</string>
	<string name="dish_canteen">食堂</string>
	<string name="dish_type">口味</string>
</resources>
