<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDishesFace" >

    <ImageView 
        android:id="@+id/before_add_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@drawable/loading"
        />
    <EditText 
        android:id="@+id/before_add_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/before_add_pic"
        android:hint="@string/dish_name"
        />
    <EditText 
        android:id="@+id/before_add_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/before_add_name"
        android:hint="@string/dish_price"
        />
    <EditText 
        android:id="@+id/before_add_canteen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/before_add_price"
        android:hint="@string/dish_canteen"
        />
    <EditText 
        android:id="@+id/before_add_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/before_add_canteen"
        android:hint="@string/dish_type"
        />
    <Button 
        android:id="@+id/before_add_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/register_button"
        android:layout_below="@id/before_add_type"
        style="@style/MyTextStyle"
        />
</RelativeLayout>
