<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegiserActivity" >

    <TextView
   	    android:id="@+id/blank2" 
   	    android:layout_width="fill_parent"
   	    android:layout_height="30dip"
   	    />
   
    <EditText 
        android:id="@+id/name_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/blank2"
        android:layout_centerHorizontal="true"
	    android:hint="@string/username"
	    android:background="@drawable/login_style"
	    style="@style/MyEditStyle"

        />

    <EditText 
        android:id="@+id/pass_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_e"
        android:inputType="textPassword"
	    android:background="@color/my_gray"
	    android:layout_alignRight="@id/name_e"
	    android:layout_alignLeft="@id/name_e"
	    android:hint="@string/password"
	    style="@style/MyEditStyle"
        />

    <EditText 
        android:id="@+id/cpass_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_e"
        android:inputType="textPassword"
	    android:layout_alignRight="@id/name_e"
	    android:layout_alignLeft="@id/name_e"
	    android:background="@drawable/register_style"
	    android:hint="@string/confirm_password"
	    style="@style/MyEditStyle"
        />

    <EditText 
        android:id="@+id/shool_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpass_e"
        android:background="@color/my_gray"
	    android:layout_alignRight="@id/name_e"
	    android:layout_alignLeft="@id/name_e"
	    android:hint="@string/register_school"
	    style="@style/MyEditStyle"
        />

    <EditText 
        android:id="@+id/address_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shool_e"
        android:inputType="text"
	    android:layout_alignRight="@id/name_e"
	    android:layout_alignLeft="@id/name_e"
	    android:background="@drawable/register_style"
	    android:hint="@string/register_addrs"
	    style="@style/MyEditStyle"
        />

    <EditText 
        android:id="@+id/info_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_e"
        android:background="@color/my_gray"
	    android:layout_alignRight="@id/name_e"
	    android:layout_alignLeft="@id/name_e"
	    android:hint="@string/register_info"
	    android:lines="6"
	    style="@style/MyEditStyle"
        />

	<Button
	    android:id="@+id/register_confirm"
	    android:layout_width="150dip"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/info_e"
	    android:layout_alignLeft="@id/name_e"
	    android:background="@drawable/login_in_button"
	    android:text="@string/register_ok"
	    style="@style/MyTextStyle"
	        />
	<Button 
	   android:id="@+id/alter"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:text="@string/alter_info"
	   android:background="@drawable/register_button"
	   android:layout_toRightOf="@id/register_confirm"
	   android:layout_alignTop="@id/register_confirm"
	   android:layout_alignBottom="@id/register_confirm"
	   android:layout_alignRight="@id/name_e"
	   style="@style/MyTextStyle"
	   />
    
</RelativeLayout>
