<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <Button 
        android:id="@+id/more_to_square"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_square"
        android:background="@drawable/more_bn"        
        android:layout_marginTop="10dip"
        android:layout_marginBottom="5dip"
        style="@style/MoreBnStyle"
        />
    <Button
        android:id="@+id/more_price_compare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_compare"
        android:background="@drawable/more_bn"
        android:layout_below="@id/more_to_square"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        style="@style/MoreBnStyle"
        />
    <Button 
        android:id="@+id/more_AA_part"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/AA_part"
        android:layout_below="@id/more_price_compare"
        android:background="@drawable/more_bn"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        style="@style/MoreBnStyle"
        />
    <Button 
        android:id="@+id/more_take_away"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_away"
        android:layout_below="@id/more_AA_part"
        android:background="@drawable/more_bn"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        style="@style/MoreBnStyle"
        />
    <Button 
        android:id="@+id/more_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_below="@id/more_take_away"
        android:background="@drawable/more_bn"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        style="@style/MoreBnStyle"
        />
</RelativeLayout>