<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<TextView 
	    android:id="@+id/square_commet_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dip"
	    android:paddingTop="10dip"
	    android:text="@string/no_name"
	    />
	<TextView 
	    android:id="@+id/square_commet_date"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:paddingRight="10dip"
	    android:paddingTop="10dip"
	    android:text="@string/no_date"
	    />
	<TextView 
	    android:id="@+id/square_commet_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="40dip"
	    android:paddingRight="40dip"
	    android:text="@string/no_text"
	    android:layout_below="@id/square_commet_date"
	    android:paddingTop="20dip"
	    />
	<ImageView 
	    android:id="@+id/square_commet_pic"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/square_commet_text"
	    android:paddingTop="20dip"
	    android:paddingLeft="40dip"
	    android:contentDescription="@drawable/loading"
	    />
	<Button 
	    android:id="@+id/square_commet_hehe"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/square_commet_pic"
	    android:paddingTop="20dip"
	    android:layout_alignParentRight="true"
	    android:text="@string/hehe"
	    />
</RelativeLayout>