<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<Button 
	    android:id="@+id/add_by_camera"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/camera"
	    android:background="@drawable/setting_bn_popup"
	    />
    <Button 
        android:id="@+id/add_by_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_by_camera"
        android:text="@string/gallery"
        android:background="@drawable/setting_bn_popup"
        />
    <Button 
        android:id="@+id/add_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_by_gallery"
        android:text="@string/cancel"
        android:background="@drawable/setting_bn_popup"
        />
</RelativeLayout>