<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_login_bg"
    tools:context=".LoginFace" >
   	<TextView
   	    android:id="@+id/blank" 
   	    android:layout_width="fill_parent"
   	    android:layout_height="50dip"
   	    />
	    <EditText 
	        android:id="@+id/username_inputer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	      	android:layout_below="@id/blank"
	        android:layout_centerHorizontal="true"
	        android:hint="@string/username"
	        android:background="@drawable/login_style"
	        style="@style/MyEditStyle"
	        />
	    <EditText 
	        android:id="@+id/password_inputer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:background="@color/my_gray"
	        android:layout_below="@id/username_inputer"
	        android:layout_alignRight="@id/username_inputer"
	        android:layout_alignLeft="@id/username_inputer"
	        android:hint="@string/password"
	        style="@style/MyEditStyle"
	        />
	    <Button
	        android:id="@+id/login_bn"
	        android:layout_width="150dip"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/password_inputer"
	        android:layout_alignLeft="@id/username_inputer"
	        android:background="@drawable/login_in_button"
	        android:text="@string/login"
	        style="@style/MyTextStyle"
	        />
	    <Button 
	        android:id="@+id/register_bn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/register"
	        android:background="@drawable/register_button"
	        android:layout_toRightOf="@id/login_bn"
	        android:layout_alignTop="@id/login_bn"
	        android:layout_alignBottom="@id/login_bn"
	        android:layout_alignRight="@id/username_inputer"
	        style="@style/MyTextStyle"
	        />

</RelativeLayout>
