<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SquareFace" >
    <LinearLayout 
        android:id="@+id/square_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_gray"
        android:orientation="vertical"
        >
        <Button 
            android:id="@+id/square_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
      		android:paddingLeft="5dip"
      		android:text="@string/back"
            />
    </LinearLayout>
	<LinearLayout 
	    android:id="@+id/down_tap"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true"
	    >
		<Button 
		    android:id="@+id/square_share_mine"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:text="@string/deliver"
		    />
		<Button 
		    android:id="@+id/square_about_me"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:text="@string/about_me"
		    />
	</LinearLayout>
	<ListView 
	    android:id="@+id/square_commets"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/square_title"
	    android:layout_above="@id/down_tap"
	    />
</RelativeLayout>
